# qs

./: .gitignore  README.md  UninstallPKG.zip.qs_dl  _qs  comp-zsh.sh  main.py  project_configure.csv  project_configure.json  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
.metals/: metals.mv.db
Docs/: README.md  plugin.json  preload.js
Docs/doc/: API.html  Developers.html  Usage.html  operation.html  tips.html
QuickStart/: main.py
QuickStart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
QuickStart_Rhy/: API.py  ImageDeal.py  System.py  __cache__.py  __config__.py  __init__.py  apiTools.py  basic.py  call_api.py  firstRun.py  funcList.py  func_list.py  lang.json  m3u8_dl.py  main.py  nettools.py  normal_dl.py  qsLesson.py
QuickStart_Rhy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
QuickStart_Rhy/API/: AITranslate.py  API_init.py  AipImage.py  AipNLP.py  AliCloud.py  Aliyun_oss.py  BaiduCloud.py  ChatGPT.py  CommonClipboard.py  DeepL.py  DeepLX.py  Dict.py  IPinfo.py  IpInfo.py  Lolicon.py  PushDeer.py  QiniuOSS.py  Qiniu_oss.py  Seafile.py  Serper.py  SimpleAPI.py  TencentCloud.py  TencentTranslate.py  __init__.py  alapi.py  simple_api.py  txcos.py
QuickStart_Rhy/API/GPT/: __init__.py  alapi.py  common.py  openai.py  poe.py
QuickStart_Rhy/ImageTools/: ColorTools.py  ImagePreview.py  ImageTools.py  VideoTools.py  __init__.py
QuickStart_Rhy/NetTools/: HttpServer.py  M3u8DL.py  MultiSingleDL.py  NormalDL.py  WiFi.py  WiFiDarwin.py  __init__.py  basic.py  m3u8_dl.py  normal_dl.py  server.py
QuickStart_Rhy/NumbaTools/: __init__.py
QuickStart_Rhy/SystemTools/: Compress.py  Diff.py  DiskMac.py  FileHash.py  Monitor.py  __init__.py
QuickStart_Rhy/ThreadTools/: __init__.py
QuickStart_Rhy/TuiTools/: Bar.py  Line.py  Table.py  __init__.py
QuickStart_Rhy/Wrapper/: __init__.py
backup/: pyproject.toml  setup.cfg.111  setup.py
complete/fig/: README.md  qs-en.ts  qs-zh.ts
complete/zsh/: _qs
