[tool.poetry]
name = "QuickStart-Rhy"
version = "0.7.23"
description = "A Command Line Toolbox"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "QuickStart_Rhy"}, {include = "QuickStart_Rhy/lang.json"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
urllib3 = "^1.26.15"
rich = "^13.3.4"
Qpro = "^0.12.1"
inquirer-rhy = "^0.1.2"

[tool.poetry.scripts]
qs = "QuickStart_Rhy.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
