[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "QuickStart-Rhy"
version = "0.7.34"
description = "A Command Line Toolbox"
authors = [ "Rhythmicc <rhythmlian.cn@gmail.com>",]
license = "MIT"
readme = "README.md"
[[tool.poetry.packages]]
include = "QuickStart_Rhy"

[[tool.poetry.packages]]
include = "QuickStart_Rhy/lang.json"

[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = "22"
path = "/opt/homebrew/lib/python3.13/site-packages/"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
urllib3 = "^1.26.15"
rich = "^13.3.4"
Qpro = "^0.13.0"
inquirer-rhy = "^0.1.2"

[tool.poetry.scripts]
qs = "QuickStart_Rhy.main:main"

[tool.qpro.config]
build = ""
entry_point = ""
executable = "python3 -m QuickStart_Rhy.main"
input_file = ""
template_root = ""
enable_complete = true
