[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickStart-Rhy"
version = "0.7.53"
description = "A Command Line Toolbox"
authors = [
    {name = "Rhythmicc", email = "rhythmlian.cn@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "rich>=13.3.4",
    "Qpro>=0.13.0",
    "inquirer-rhy>=0.1.2"
]

[project.scripts]
qs = "QuickStart_Rhy.main:main"

[tool.setuptools.packages.find]
exclude = ["Docs", "complete"]

[tool.setuptools.package-data]
QuickStart_Rhy = ["lang.json"]

[tool.qpro.config]
build = ""
entry_point = ""
executable = "python3 -m QuickStart_Rhy.main"
input_file = ""
template_root = ""
enable_complete = true
